Make tags more readable, fixes #35

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,6 +17,11 @@ form {
   width: 100%;
 }
 
+.label {
+  font-weight: unset;
+  font-size: unset;
+}
+
 #time {
   font-weight: bold;
 }
